tests/paczka1/fuzzy1/76449119.err
Error in line 5: SpMioxQIYt A984 41,5
Error in line 20: SpMioxQIYt A411 67,4
Error in line 23: QyUfKHJKl A984 619,0
Error in line 24: QyUfKHJKl A411 56,7
Error in line 27: QyUfKHJKl A984 16,8
Error in line 32: QyUfKHJKl S742 34,6
Error in line 33: QyUfKHJKl A984 10,0
